--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,9 @@
-name: CI
-
+# .github/workflows/ci.yml
 on:
   push:
     branches: [ main ]
   pull_request:
+    branches: [ '**' ]    # run CI on every PR
 
 jobs:
   build:
@@ -16,7 +16,6 @@ jobs:
       - run: npm install
       - run: npm test
       - run: npm run lint
-
   release:
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     needs: build
