--- a/package.json
+++ b/package.json
@@ -12,36 +12,47 @@
     "node": ">=16"
   },
   "scripts": {
-    "test": "jest --coverage",
+    "test": "jest --config jest.config.cjs --coverage",
     "lint": "eslint .",
     "release": "semantic-release"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/your-org/experimental-js-lexer.git"
+    "url": "git+https://github.com/jick666/experimental-js-lexer-complete.git"
   },
   "bugs": {
-    "url": "https://github.com/your-org/experimental-js-lexer/issues"
+    "url": "https://github.com/jick666/experimental-js-lexer-complete/issues"
   },
-  "homepage": "https://github.com/your-org/experimental-js-lexer#readme",
+  "homepage": "https://github.com/jick666/experimental-js-lexer-complete#readme",
   "license": "MIT",
+  "babel": {
+    "presets": [
+      [
+        "@babel/preset-env",
+        {
+          "targets": {
+            "node": "current"
+          }
+        }
+      ]
+    ]
+  },
   "devDependencies": {
+    "@babel/core": "^7.27.4",
+    "@babel/preset-env": "^7.27.2",
+    "babel-jest": "^30.0.0",
+    "eslint": "^8.0.0",
+    "jest": "^29.0.0",
+    "semantic-release": "^21.0.0",
     "@semantic-release/changelog": "^6.0.0",
     "@semantic-release/commit-analyzer": "^9.0.0",
     "@semantic-release/github": "^9.0.0",
     "@semantic-release/npm": "^9.0.0",
-    "@semantic-release/release-notes-generator": "^10.0.0",
-    "eslint": "^8.0.0",
-    "jest": "^29.0.0",
-    "semantic-release": "^21.0.0"
+    "@semantic-release/release-notes-generator": "^10.0.0"
   },
   "release": {
     "branches": [
       "main"
     ]
-  },
-  "dependencies": {
-    "gh": "^2.8.9",
-    "git": "^0.1.5"
   }
 }
