--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,17 +5,33 @@ on:
   pull_request:
     branches: [ '**' ]    # run CI on every PR
 
+# .github/workflows/ci.yml
+on:
+  push:    { branches: [main] }
+  pull_request:
+
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      # force devDependencies to be installed even if NODE_ENV is "production"
+      NPM_CONFIG_PRODUCTION: false
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
         with:
-          node-version: '16'
-      - run: npm install
-      - run: npm test
-      - run: npm run lint
+          node-version: '18'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run tests
+        run: npm test
+
+      - name: Lint
+        run: npm run lint
   release:
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     needs: build
