--- a/package.json
+++ b/package.json
@@ -4,12 +4,9 @@
   "description": "A modular, adaptive, experimental JavaScript lexer designed for autonomous development by OpenAI Codex agents.",
   "type": "module",
   "main": "index.js",
-  "files": [
-    "src/",
-    "dist/"
-  ],
+  "files": ["src/", "dist/"],
   "engines": {
-    "node": ">=16"
+    "node": ">=18"
   },
   "scripts": {
     "test": "jest --config jest.config.cjs --coverage",
@@ -29,11 +26,7 @@
     "presets": [
       [
         "@babel/preset-env",
-        {
-          "targets": {
-            "node": "current"
-          }
-        }
+        { "targets": { "node": "current" } }
       ]
     ]
   },
@@ -48,12 +41,12 @@
     "@semantic-release/commit-analyzer": "^9.0.0",
     "@semantic-release/github": "^9.0.0",
     "@semantic-release/npm": "^9.0.0",
-    "@semantic-release/release-notes-generator": "^10.0.0",
+    "@semantic-release/release-notes-generator": "^10.0.0"
+  },
+  "dependencies": {
     "@octokit/rest": "^19.0.0"
   },
   "release": {
-    "branches": [
-      "main"
-    ]
+    "branches": ["main"]
   }
 }
