--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "experimental-js-lexer",
-  "version": "0.1.0-semantically-released",
+  "version": "0.1.0",
   "description": "A modular, adaptive, experimental JavaScript lexer designed for autonomous development by OpenAI Codex agents.",
   "type": "module",
   "main": "dist/index.js",
@@ -11,7 +11,7 @@
     "node": ">=18"
   },
   "scripts": {
-    "prepare": "node scripts/prepare-husky.cjs",
+    "prepare": "husky install",
     "setup": "bash ./.github/scripts/setup.sh",
     "clean": "rimraf dist coverage",
     "build": "npm run clean && babel src --out-dir dist",
@@ -22,30 +22,18 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jick666/experimental-js-lexer-complete.git"
+    "url": "https://github.com/jick666/experimental-js-lexer-complete.git"
   },
   "bugs": {
     "url": "https://github.com/jick666/experimental-js-lexer-complete/issues"
   },
   "homepage": "https://github.com/jick666/experimental-js-lexer-complete#readme",
   "license": "MIT",
-  "babel": {
-    "presets": [
-      [
-        "@babel/preset-env",
-        {
-          "targets": {
-            "node": "current"
-          }
-        }
-      ]
-    ]
-  },
   "dependencies": {
     "@octokit/rest": "^19.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.27.2",
+    "@babel/cli": "^7.27.4",
     "@babel/core": "^7.27.4",
     "@babel/preset-env": "^7.27.2",
     "babel-jest": "^30.0.0",
@@ -55,14 +43,20 @@
     "jest": "^29.0.0",
     "lint-staged": "^14.0.0",
     "rimraf": "^5.0.0",
-    "semantic-release": "^21.0.0",
     "@commitlint/cli": "^17.6.0",
     "@commitlint/config-conventional": "^17.6.0",
+    "semantic-release": "^21.0.0",
     "@semantic-release/changelog": "^6.0.0",
     "@semantic-release/commit-analyzer": "^9.0.0",
     "@semantic-release/github": "^9.0.0",
     "@semantic-release/npm": "^9.0.0",
     "@semantic-release/release-notes-generator": "^10.0.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npx lint-staged",
+      "commit-msg": "npx --no-install commitlint --edit \"$1\""
+    }
   },
   "lint-staged": {
     "*.js": [
@@ -73,12 +67,6 @@
       "npm test -- --findRelatedTests",
       "git add"
     ]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npx lint-staged",
-      "commit-msg": "npx --no -- commitlint --edit $1"
-    }
   },
   "commitlint": {
     "extends": [
