--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,21 +1,17 @@
-<<<<<<< HEAD
+# .github/workflows/ci.yml
 name: CI
 
-=======
-# .github/workflows/ci.yml
->>>>>>> 023e009cfa1427204152aa29cd4c704e209147e0
 on:
   push:
     branches: [ main ]
   pull_request:
-<<<<<<< HEAD
-    branches: [ main ]
 
 permissions:
   contents: read
 
 jobs:
   verify:
+    name: Verify (OS: ${{ matrix.os }}, Node: ${{ matrix.node }})
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -23,74 +19,62 @@ jobs:
         node: [18.x, 20.x]
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Check out code
+        uses: actions/checkout@v3
 
-      - name: Setup Node.js
+      - name: Setup Node.js ${{ matrix.node }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node }}
           cache: npm
 
       - name: Bootstrap project
-        run: bash ./.github/scripts/setup.sh
+        run: npm run setup
 
-      - name: Lint & Fix
+      - name: Lint & auto‐fix
         run: npm run lint
 
-      - name: Run Tests & Coverage
+      - name: Run tests & collect coverage
         run: npm test
 
-      - name: Build Artifacts
+      - name: Build dist
         run: npm run build
 
-      - name: Upload Coverage Report
+      - name: Upload coverage report
         if: success()
         uses: actions/upload-artifact@v3
         with:
-          name: coverage-report
+          name: coverage-${{ matrix.os }}-node${{ matrix.node }}
           path: coverage/
-=======
-    branches: [ '**' ]    # run CI on every PR
 
-# .github/workflows/ci.yml
-on:
-  push:    { branches: [main] }
-  pull_request:
-
-jobs:
-  build:
+  release:
+    name: Release
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    needs: verify
     runs-on: ubuntu-latest
-    env:
-      # force devDependencies to be installed even if NODE_ENV is "production"
-      NPM_CONFIG_PRODUCTION: false
-    steps:
-      - uses: actions/checkout@v3
+    permissions:
+      contents: write
 
-      - name: Set up Node.js
+    steps:
+      - name: Check out full history
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Setup Node.js 18.x
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version: 18.x
+          cache: npm
 
-      - name: Install dependencies
-        run: npm ci
+      - name: Bootstrap project
+        run: npm run setup
 
-      - name: Run tests
-        run: npm test
+      - name: Build for release
+        run: npm run build
 
-      - name: Lint
-        run: npm run lint
-  release:
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '16'
-      - run: npm ci
-      - run: npm run release
+      - name: Publish via Semantic Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
->>>>>>> 023e009cfa1427204152aa29cd4c704e209147e0
+        run: npm run release
