--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "clean": "rimraf dist coverage",
     "build": "npm run clean && babel src --out-dir dist",
     "lint": "eslint . --fix",
-    "test": "jest --config jest.config.cjs --coverage",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest --config jest.config.cjs --coverage",
     "release": "semantic-release"
   },
   "repository": {
