--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "clean": "rimraf dist coverage",
     "build": "npm run clean && babel src --out-dir dist",
     "lint": "eslint . --fix",
-    "test": "jest --config jest.config.cjs --coverage",
+    "test": "node --experimental-vm-modules node_modules/.bin/jest --config jest.config.cjs --coverage",
     "release": "semantic-release"
   },
   "repository": {
@@ -27,7 +27,7 @@
     "@octokit/rest": "^19.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.27.4",
+    "@babel/cli": "^7.27.2",
     "@babel/core": "^7.27.4",
     "@babel/preset-env": "^7.27.2",
     "@commitlint/cli": "^17.6.0",
