--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "prepare": "husky install",
     "clean": "rimraf dist coverage",
-    "build": "npm run clean && babel src --out-dir dist",
+    "build": "npm run clean && babel src --out-dir dist && tsc",
     "lint": "eslint . --fix",
     "test": "node --experimental-vm-modules node_modules/.bin/jest --config jest.config.cjs --coverage",
     "release": "semantic-release"
@@ -44,7 +44,8 @@
     "jest": "^29.0.0",
     "lint-staged": "^14.0.0",
     "rimraf": "^5.0.0",
-    "semantic-release": "^21.0.0"
+    "semantic-release": "^21.0.0",
+    "typescript": "^5.2.2"
   },
   "husky": {
     "hooks": {
