chore: mark extension task complete

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint .",
     "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --config jest.config.cjs --coverage",
     "bench": "node tests/benchmarks/lexer.bench.js",
-    "prepare": "npm run lint"
+    "prepare": "npm run lint",
+    "build:extension": "npm --prefix extension install && npm --prefix extension run build",
+    "publish:extension": "npm --prefix extension install && npm --prefix extension run publish"
   },
   "keywords": [
     "lexer",
