--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,11 @@ Thumbs.db
 /.yarn/unplugged/
 /.yarn/build-state.yml
 .yarn/install-state.gz
+
+# VS Code extension
+/extension/dist/
+/extension/node_modules/
+/extension/*.vsix
+/extension/experimental-js-lexer-*.tgz
+
+/extension/package-lock.json
