--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@commitlint/cli": "^17.0.0",
     "@commitlint/config-conventional": "^17.0.0",
     "@jest/globals": "^29.0.0",
+    "@octokit/rest": "^22.0.0",
     "eslint": "^8.0.0",
     "husky": "^9.1.7",
     "jest": "^29.0.0"
