--- a/.github/workflows/auto-issue.yml
+++ b/.github/workflows/auto-issue.yml
@@ -1,14 +1,16 @@
 name: Auto-Create Reader Tasks
 on:
   schedule:
-    - cron: '0 4 * * *'  # daily at 04:00 UTC
+    - cron: '0 4 * * *'   # daily at 04:00 UTC
+
 jobs:
   file-tasks:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
-        with: { node-version: '16' }
+        with:
+          node-version: 18          # ← was 16
       - run: node .github/scripts/seed-todo.js
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
