--- a/.github/workflows/drift-check.yml
+++ b/.github/workflows/drift-check.yml
@@ -1,7 +1,8 @@
 name: Spec-Code Drift Check
 on:
   schedule:
-    - cron: '0 2 * * *'
+    - cron: '0 2 * * *'   # nightly at 02:00 UTC
+
 jobs:
   drift:
     runs-on: ubuntu-latest
@@ -12,3 +13,6 @@ jobs:
           node-version: 18
       - run: npm install
       - run: node .github/scripts/check-drift.js
+        env:                       # ← NEW
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_REPOSITORY: ${{ github.repository }}
