--- a/.github/workflows/drift-check.yml
+++ b/.github/workflows/drift-check.yml
@@ -1,18 +1,17 @@
 name: Spec-Code Drift Check
 on:
   schedule:
-    - cron: '0 2 * * *'   # nightly at 02:00 UTC
+    - cron: '0 2 * * *'
 
 jobs:
   drift:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 18
-      - run: npm install
+      - uses: actions/setup-node@v4
+        with: { node-version: 20 }
+      - run: npm ci
       - run: node .github/scripts/check-drift.js
-        env:                       # ← NEW
+        env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_REPOSITORY: ${{ github.repository }}
