--- a/.github/workflows/project-sync.yml
+++ b/.github/workflows/project-sync.yml
@@ -3,17 +3,16 @@ on:
   schedule:
     - cron: '0 1 * * *'
   push:
-    paths:
-      - 'docs/TODO_CHECKLIST.md'
+    paths: ['docs/TODO_CHECKLIST.md']
+
 jobs:
   sync:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 18
-      - run: npm install
+      - uses: actions/setup-node@v4
+        with: { node-version: 20 }
+      - run: npm ci
       - run: node .github/scripts/setup-project-board.js
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
