--- a/.github/workflows/publish-vscode.yml
+++ b/.github/workflows/publish-vscode.yml
@@ -1,18 +1,17 @@
 name: Publish VS Code Extension
 on:
-  release:
-    types: [published]
+  release: { types: [published] }
+
 jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 18
-      - run: npm install
+      - uses: actions/setup-node@v4
+        with: { node-version: 20 }
+      - run: npm ci
       - run: npm run build:extension
       - run: npm install -g vsce
-      - env:
+      - run: vsce publish --pat "${VSCE_TOKEN}"
+        env:
           VSCE_TOKEN: ${{ secrets.VSCE_TOKEN }}
-        run: vsce publish --pat ${VSCE_TOKEN}
