--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,32 +1,23 @@
 name: Release
-
 on:
-  push:
-    branches: [ main ]
+  push: { branches: [main] }
 
 permissions:
   contents: write
-  issues:   write
+  issues: write
   pull-requests: write
 
 jobs:
   publish:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v3
+        with: { fetch-depth: 0 }
+      - uses: actions/setup-node@v4
         with:
-          fetch-depth: 0
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18.x
+          node-version: 20
           cache: npm
-
-
-      - name: Publish release
+      - run: npx semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN:   ${{ secrets.NPM_TOKEN }}
-        run: npx semantic-release
+          NPM_TOKEN:    ${{ secrets.NPM_TOKEN }}
