--- a/.github/workflows/auto-issue.yml
+++ b/.github/workflows/auto-issue.yml
@@ -1,17 +1,24 @@
 name: Auto-Create Reader Tasks
+
 on:
   schedule:
     - cron: '0 4 * * *'   # daily 04:00 UTC
+
+permissions:
+  issues:  write
+  contents: read
 
 jobs:
   file-tasks:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+
       - uses: actions/setup-node@v4
-        with: { node-version: 20 }
-      - run: npm ci
+        with:
+          node-version: 20
+
       - run: node .github/scripts/seed-todo.js
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          # default GITHUB_TOKEN comes for free
           GITHUB_REPOSITORY: ${{ github.repository }}
