--- a/.github/workflows/drift-check.yml
+++ b/.github/workflows/drift-check.yml
@@ -1,17 +1,25 @@
 name: Spec-Code Drift Check
+
 on:
   schedule:
-    - cron: '0 2 * * *'
+    - cron: '0 2 * * *'   # daily 02:00 UTC
+
+permissions:
+  issues:  write
+  contents: read
 
 jobs:
   drift:
     runs-on: ubuntu-latest
+    env:
+      GITHUB_REPOSITORY: ${{ github.repository }}
+
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+
       - uses: actions/setup-node@v4
-        with: { node-version: 20 }
-      - run: npm ci
+        with:
+          node-version: 20
+
+      - run: npm install
       - run: node .github/scripts/check-drift.js
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITHUB_REPOSITORY: ${{ github.repository }}
