--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,26 +1,17 @@
 name: CI
 on:
-  push:        { branches: [main] }
-  pull_request { branches: ['**'] }
+  push: { branches: [main] }
+  pull_request:
 
 jobs:
-  test:
+  quality:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [20.x, 22.x]
-
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+        with: { fetch-depth: 0 }
       - uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 20
           cache: npm
       - run: npm ci
-      - run: npm run lint
-      - run: npm test
-      - uses: actions/upload-artifact@v4
-        if: success()
-        with:
-          name: coverage-${{ matrix.node-version }}
-          path: coverage/
+      - run: npm run check
