--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
   "type": "module",
   "scripts": {
     "start": "node index.js",
-    "lint": "eslint .",
-    "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --config jest.config.cjs --coverage",
     "bench": "node tests/benchmarks/lexer.bench.js",
     "build": "echo \"Nothing to build\"",
     "prepare": "node scripts/prepare-husky.cjs",
     "build:extension": "npm --prefix extension install && npm --prefix extension run build",
     "publish:extension": "npm --prefix extension install && npm --prefix extension run publish",
-    "sync:project": "node .github/scripts/setup-project-board.js && node .github/scripts/seed-todo.js",
+    "sync:project": "node .github/scripts/seed-todo.js",
     "workflow": "bash scripts/run-workflow.sh",
-    "next-task": "node scripts/next-task.cjs"
+    "next-task": "node scripts/next-task.cjs",
+    "check": "node scripts/check.cjs",
+    "ci": "npm run check"
   },
   "keywords": [
     "lexer",
