--- a/package.json
+++ b/package.json
@@ -1,30 +1,35 @@
 {
   "name": "experimental-js-lexer",
   "version": "0.1.0",
-  "description": "A modular, adaptive, experimental JavaScript lexer designed for autonomous development by OpenAI Codex agents.",
+  "description": "A modular, adaptive JavaScript lexer designed for autonomous development by OpenAI Codex agents.",
   "main": "index.js",
   "type": "module",
+
   "scripts": {
     "start": "node index.js",
+    "lint":  "eslint .",
+
+    "test":  "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --config jest.config.cjs --coverage",
     "bench": "node tests/benchmarks/lexer.bench.js",
+
     "build": "echo \"Nothing to build\"",
     "prepare": "node scripts/prepare-husky.cjs",
-    "build:extension": "npm --prefix extension install && npm --prefix extension run build",
+    "build:extension":   "npm --prefix extension install && npm --prefix extension run build",
     "publish:extension": "npm --prefix extension install && npm --prefix extension run publish",
+
     "sync:project": "node .github/scripts/seed-todo.js",
-    "workflow": "bash scripts/run-workflow.sh",
-    "next-task": "node scripts/next-task.cjs",
+    "workflow":     "bash scripts/run-workflow.sh",
+    "next-task":    "node scripts/next-task.cjs",
+
     "check": "node scripts/check.cjs",
-    "ci": "npm run check"
+    "ci":    "npm run check"
   },
-  "keywords": [
-    "lexer",
-    "javascript",
-    "codex",
-    "automation"
-  ],
+
+  "keywords": ["lexer","javascript","codex","automation"],
+
   "author": "",
   "license": "MIT",
+
   "devDependencies": {
     "@commitlint/cli": "^17.0.0",
     "@commitlint/config-conventional": "^17.0.0",
@@ -34,9 +39,9 @@
     "husky": "^9.1.7",
     "jest": "^29.0.0"
   },
-  "engines": {
-    "node": ">=18"
-  },
+
+  "engines": { "node": ">=18" },
+
   "dependencies": {
     "unicode-match-property-ecmascript": "^2.0.0",
     "unicode-match-property-value-ecmascript": "^2.2.0"
