--- a/.github/workflows/agent-workflow.yml
+++ b/.github/workflows/agent-workflow.yml
@@ -7,7 +7,7 @@ on:
     types: [created]
   pull_request:
     types: [opened, synchronize]
-  workflow_dispatch: {}
+  workflow_dispatch:
 
 permissions:
   contents: write
@@ -42,14 +42,17 @@ jobs:
     needs: setup
     if: ${{ github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch' }}
     runs-on: ubuntu-latest
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
     steps:
-      - name: Run project workflow
-        run: npm run workflow
+      - name: Run automation
+        run: node agentic-automation.js
       - name: Commit & Push
         run: |
           git config user.name  "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add .
+          git add -A
           if git diff --cached --quiet; then
             echo "No changes to commit."
             exit 0
@@ -66,10 +69,12 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - run: |
+      - name: Record base SHA
+        run: |
           git fetch origin main
-          echo "$(git rev-parse origin/main)" > base.sha
-      - run: |
+          git rev-parse origin/main > base.sha
+      - name: Check for divergence
+        run: |
           git fetch origin main
           if ! diff <(cat base.sha) <(git rev-parse origin/main); then
             echo "::error::main has moved on—aborting"
