--- a/.github/workflows/agent-workflow.yml
+++ b/.github/workflows/agent-workflow.yml
@@ -43,23 +43,11 @@ jobs:
     if: ${{ github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch' }}
     runs-on: ubuntu-latest
     env:
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+      GITHUB_TOKEN:       ${{ secrets.GITHUB_TOKEN }}
+      GITHUB_REPOSITORY:  ${{ github.repository }}
     steps:
       - name: Run automation
         run: node agentic-automation.js
-      - name: Commit & Push
-        run: |
-          git config user.name  "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add -A
-          if git diff --cached --quiet; then
-            echo "No changes to commit."
-            exit 0
-          fi
-          git commit -m "🤖 agent updates"
-          git checkout -b agent/changes-${GITHUB_RUN_ID}
-          git push --set-upstream origin agent/changes-${GITHUB_RUN_ID}
 
   conflict-agent:
     needs: codegen-agent
