--- a/.github/workflows/agent-workflow.yml
+++ b/.github/workflows/agent-workflow.yml
@@ -46,6 +46,9 @@ jobs:
       GITHUB_TOKEN:       ${{ secrets.GITHUB_TOKEN }}
       GITHUB_REPOSITORY:  ${{ github.repository }}
     steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - name: Run automation
         run: node agentic-automation.js
 
