--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bench": "node tests/benchmarks/lexer.bench.js",
     "build": "echo \"Nothing to build\"",
     "prepare": "node .github/scripts/prepare-husky.cjs",
+    "check-coverage": "node src/utils/checkCoverage.js",
     "build:extension": "npm --prefix extension install && npm --prefix extension run build",
     "publish:extension": "npm --prefix extension install && npm --prefix extension run publish",
     "workflow": "bash .github/scripts/run-workflow.sh",
