--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "@octokit/rest": "^22.0.0",
     "eslint": "^8.0.0",
     "husky": "^9.1.7",
-    "jest": "^29.0.0"
+    "jest": "^29.0.0",
+    "nock": "^13.3.0"
   },
   "dependencies": {
     "unicode-match-property-ecmascript": "^2.0.0",
