--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,17 +1,23 @@
 name: CI
 on:
-  push:        { branches: [main] }
-  pull_request { branches: ['**'] }
+  push:
+    branches: [main]
+  pull_request:
+    branches: ['**']
+
+permissions:
+  contents:        read
+  pull-requests:   write   # so coverage annotations post
+  projects:        write   # PR card auto-moves when status changes
 
 jobs:
   test:
     runs-on: ubuntu-latest
     strategy:
-      matrix:
-        node-version: [20.x, 22.x]
+      matrix: { node-version: [20.x, 22.x] }
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
