--- a/.github/workflows/drift-check.yml
+++ b/.github/workflows/drift-check.yml
@@ -14,7 +14,7 @@ jobs:
   drift:
     runs-on: ubuntu-latest
     env:
-      PROJECT_NAME:     Automation
+      PROJECT_NAME:     Experimental Lexer
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
